--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     <!-- header -->
     <header class="version_1">
       <div class="layer"></div><!-- Mobile menu overlay mask -->
-
+  
       <!-- main_header -->
       <div class="main_header">
         <div class="container">
@@ -66,7 +66,7 @@
                   <a href="javascript:void(0);" class="show-submenu">Language</a>
                   <ul>
                     <li><a href="#">English</a></li>
-                    <li><a href="#">Arabic</a></li>
+                    <li><a href="#">العربية</a></li>
                   </ul>
                 </li>
                   <li>
@@ -159,7 +159,7 @@
           <!-- /row -->
         </div>
       </div>
-
+  
       <!-- main_nav -->
       <div class="main_nav Sticky">
         <div class="container">
@@ -179,9 +179,9 @@
                     </span>
                     <div id="menu">
                       <ul>
-                        <li><span><a href="#0">Collections</a></span>
+                        <li><span><a href="/products">Collections</a></span>
                           <ul>
-                            <li><a href="listing-grid-1-full.html">Trending</a></li>
+                            <li><a >name</a></li>
                             <li><a href="listing-grid-2-full.html">Life style</a></li>
                             <li><a href="listing-grid-3.html">Running</a></li>
                             <li><a href="listing-grid-4-sidebar-left.html">Training</a></li>
@@ -321,7 +321,7 @@
         </div>
         <!-- /search_mobile -->
       </div>
-
+  
     </header>
       
     <main>
@@ -403,8 +403,8 @@
                 <li><a href="help.html">Faq</a></li>
                 <li><a href="help.html">Help</a></li>
                 <li><a href="account.html">My account</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contacts.html">Contacts</a></li>
+                <!-- <li><a href="blog.html">Blog</a></li>
+                <li><a href="contacts.html">Contacts</a></li> -->
               </ul>
             </div>
           </div>
@@ -461,20 +461,18 @@
                 <div class="styled-select lang-selector">
                   <select>
                     <option value="English" selected>English</option>
-                    <option value="French">French</option>
-                    <option value="Spanish">Spanish</option>
-                    <option value="Russian">Russian</option>
+                    <option value="French">العربية</option>
                   </select>
                 </div>
               </li>
-              <li>
+              <!-- <li>
                 <div class="styled-select currency-selector">
                   <select>
                     <option value="US Dollars" selected>US Dollars</option>
                     <option value="Euro">Euro</option>
                   </select>
                 </div>
-              </li>
+              </li> -->
               <li><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/cards_all.svg" alt="" width="198" height="30" class="lazy"></li>
             </ul>
           </div>
