--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
             <h3 data-target="#collapse_1">Quick Links</h3>
             <div class="collapse dont-collapse-sm links" id="collapse_1">
               <ul>
-                <li><a href="about.html">About us</a></li>
+                <li><a href="/about">About us</a></li>
                 <li><a href="help.html">Faq</a></li>
                 <li><a href="help.html">Help</a></li>
                 <li><a href="account.html">My account</a></li>
